--- a/src/languages/ar_AR.json
+++ b/src/languages/ar_AR.json
@@ -47,6 +47,7 @@
       "unknown_token": "رمز غير معروف"
     },
     "activity_list": {
+      "title": "النشاط",
       "empty_state": {
         "default_label": "لا توجد معاملات بعد",
         "recycler_label": "لا توجد معاملات بعد",
@@ -140,7 +141,7 @@
         "choose_backup_cloud_description": "قم بنسخ محفظتك احتياطيًا إلى %{cloudPlatform} بأمان حتى تتمكن من استعادتها إذا فقدت جهازك أو حصلت على جهاز جديد.",
         "choose_backup_manual_description": "انشئ نسخة احتياطية لمحفظتك يدويًا بحفظ العبارة السرية في مكان آمن.",
         "enable_cloud_backups_description": "إذا كنت تفضل إنشاء نسخة احتياطية لمحفظتك يدويًا، يمكنك القيام بذلك أدناه.",
-        "latest_backup": "آخر نسخة احتياطية: %{date}",
+        "latest_backup": "آخر نسخ احتياطي: %{date}",
         "back_up_all_wallets_to_cloud": "قم بنسخ جميع المحافظ احتياطيا إلى %{cloudPlatformName}",
         "most_recent_backup": "أحدث نسخة احتياطية",
         "out_of_date": "غير محدث",
@@ -467,6 +468,9 @@
         "quote_error": "خطأ في عرض السعر",
         "no_route_found": "لم يتم العثور على مسار",
         "fetching_quote": "جارٍ جلب العرض...",
+        "rainbow_eth_rewards": "مكافآت Rainbow ETH",
+        "merkl_claimable": "خزنة %{dappName}",
+        "merkl_claimable_description": "استراتيجية %{assetSymbols}",
         "select_a_network": "حدد شبكة",
         "select_a_token": "حدد رمزًا",
         "amount_to_claim_on_network": "%{amount} للمطالبة على %{network}",
@@ -476,6 +480,9 @@
         "claimed": "تم المطالبة!",
         "claiming_failed": "فشل المطالبة",
         "insufficient_funds": "أموال غير كافية",
+        "hold_to_claim": "اضغط للمطالبة",
+        "creator_lp_fees": "رسوم LP الخاصة بالمنشئ",
+        "rainbow_token_launcher": "إطلاق رمز Rainbow",
         "claim_amount": "مطالبة %{amount}",
         "done": "تم",
         "try_again": "حاول مرة أخرى",
@@ -519,38 +526,39 @@
       "alert": "تنبيه",
       "analyze_env_variables": "تحليل متغيرات البيئة",
       "analyze_react_query": "تحليل استعلام React",
+      "analyze_user_assets_query": "تحليل استعلام أصول المستخدم",
       "applied": "تم التطبيق",
       "backups_deleted_successfully": "تم حذف النسخ الاحتياطية بنجاح",
-      "clear_async_storage": "مسح التخزين المتزامن",
+      "clear_async_storage": "مسح التخزين غير المتزامن",
       "clear_pending_txs": "مسح المعاملات المعلقة",
       "clear_image_cache": "مسح ذاكرة التخزين المؤقت للصور",
       "clear_image_metadata_cache": "مسح ذاكرة التخزين المؤقت لبيانات الصور",
       "clear_local_storage": "مسح التخزين المحلي",
-      "clear_mmkv_storage": "مسح التخزين MMKV",
+      "clear_mmkv_storage": "مسح تخزين MMKV",
       "clear_react_query_cache": "مسح ذاكرة استعلام React",
-      "connect_to_anvil": "الاتصال بـ anvil",
+      "connect_to_anvil": "الاتصال ب Anvil",
       "copy_fcm_token": "نسخ رمز FCM",
       "copy_log_lines": "نسخ أسطر السجل",
       "copy_signing_wallet_address": "نسخ عنوان توقيع المحفظة",
-      "disconnect_to_anvil": "افصل عن Anvil",
-      "crash_app_render_error": "تعطيل التطبيق (خطأ في التصيير)",
+      "disconnect_to_anvil": "انفصال عن Anvil",
+      "crash_app_render_error": "تعطل التطبيق (خطأ في العرض)",
       "enable_testnets": "تمكين شبكات الاختبار",
-      "installing_update": "تثبيت التحديث",
-      "navigation_entry_point": "نقطة الدخول للتنقل",
+      "installing_update": "جارٍ تثبيت التحديث",
+      "navigation_entry_point": "نقطة دخول التنقل",
       "no_update": "لا يوجد تحديث",
       "not_applied": "لم يتم التطبيق",
       "notifications_debug": "تصحيح الأخطاء في الإشعارات",
-      "remove_all_backups": "حذف جميع النسخ الاحتياطية",
+      "remove_all_backups": "إزالة كافة النسخ الاحتياطية",
       "keychain": {
         "menu_title": "إعادة تعيين سلسلة المفاتيح",
-        "delete_wallets": "حذف جميع المحافظ",
+        "delete_wallets": "حذف كل المحافظ",
         "alert_title": "كن حذرا!",
         "alert_body": "🚨🚨🚨 \nهذا سيؤدي إلى حذف كل مفاتيح وبيانات محافظك الخاصة نهائيا، يرجى التأكد من أنك قمت بالنسخ الاحتياطي لكل شيء قبل المتابعة!! \n🚨🚨🚨"
       },
       "restart_app": "إعادة تشغيل التطبيق",
       "reset_experimental_config": "إعادة تعيين التكوين التجريبي",
       "status": "الحالة",
-      "sync_codepush": "مزامنة كود الدفع"
+      "sync_codepush": "مز synchrony CodePush"
     },
     "discover": {
       "pulse": {
@@ -559,7 +567,6 @@
         "trading_at_prefix": "جار التداول في"
       },
       "search": {
-        "profiles": "الملفات الشخصية",
         "search_ethereum": "بحث في كل Ethereum",
         "search_ethereum_short": "بحث Ethereum",
         "search": "بحث",
@@ -604,6 +611,7 @@
         "expires_in": "تنتهي في %{minutes}دقيقة",
         "from_divider": "من",
         "to_divider": "إلى",
+        "token": "رمز",
         "view_on": "اعرض على %{blockExplorerName}",
         "view_on_etherscan": "عرض على Etherscan",
         "copy_contract_address": "نسخ عنوان العقد"
@@ -647,16 +655,14 @@
         },
         "unknown_price": {
           "title": "القيمة السوقية غير معروفة",
-          "description": "إذا قررت المتابعة، تأكد من أنك راض عن المبلغ المعروض."
+          "description": "إذا قررت المتابعة، فتأكد من أنك راضٍ عن المبالغ المعروضة."
         },
         "losing_prefix": "خاسر",
         "small_market": "سوق صغير",
         "small_market_try_smaller_amount": "سوق صغير - حاول مبلغ أصغر",
         "you_are_losing": "أنت تخسر %{priceImpact}",
         "you_are_losing_prefix": "أنت تخسر",
-        "no_data": "القيمة السوقية غير معروفة",
-        "label": "خسارة محتملة",
-        "no_data_subtitle": "إذا قررت المتابعة، تأكد من أنك راض بالمبلغ المعروض"
+        "label": "خسارة محتملة"
       },
       "source": {
         "rainbow": "أوتو",
@@ -727,6 +733,7 @@
           "circulating_supply": "الإمداد الجاري",
           "max_supply": "الحد الأقصى للتوريد",
           "fully_diluted_valuation": "تقييم التشبع الكامل",
+          "created_by": "تم الإنشاء بواسطة",
           "market_cap": "القيمة السوقية",
           "created": "تم الإنشاء",
           "volume_24_hours": "الحجم في 24 ساعة",
@@ -747,9 +754,35 @@
         "about": {
           "title": "حول",
           "what_is": "ما هو %{assetName}؟"
+        },
+        "history": {
+          "title": "التاريخ",
+          "tabs": {
+            "all": "الكل",
+            "buys": "عمليات الشراء",
+            "sells": "عمليات البيع"
+          },
+          "more": "أكثر",
+          "less": "أقل",
+          "bought": "تم الشراء",
+          "sold": "تم البيع",
+          "received": "تم الاستلام",
+          "sent": "تم الإرسال",
+          "unknown": "غير معروف"
         }
       },
       "chart": {
+        "candlestick": {
+          "candle_field_labels": {
+            "c": "إغلاق",
+            "h": "مرتفع",
+            "l": "منخفض",
+            "o": "الافتتاح",
+            "t": "",
+            "v": "حجم"
+          },
+          "no_volume_label": "لا شيء"
+        },
         "all_time": "كل الأوقات",
         "date": {
           "months": {
@@ -768,9 +801,9 @@
           }
         },
         "no_chart_data": "لا توجد بيانات للرسم البياني",
-        "no_price_data": "لا يوجد بيانات عن الأسعار",
+        "no_price_data": "لا توجد بيانات أسعار",
         "past_timespan": "الماضي %{formattedTimespan}",
-        "today": "اليوم",
+        "today": "اليوم الماضي",
         "token_pool": "%{tokenName} بركة"
       },
       "contact_profile": {
@@ -929,6 +962,8 @@
       "farcaster_title": "لقد قمت بفتح\nRainbowcast",
       "redacted_description": "أيقونة قوس قزح حصرية لـ stupi لمحبي Gdupi الحقيقيين.",
       "redacted_title": "لقد فتحت\nقوس قزح المكمم",
+      "baggy_description": "من الشوارع إلى السلسلة، هذه الحقيبة الصغيرة تحمل جرعة قوس قزح المحمولة الخاصة بك. تذوق الألوان، واشعر بالفرق.",
+      "baggy_title": "لقد قمت بفتح\nRainbow Baggy",
       "button": "Snag the icon"
     },
     "explain": {
@@ -1040,7 +1075,7 @@
         "title": "ما هي Linea؟"
       },
       "opmainnet": {
-        "text": "التفاؤل هو شبكة الطبقة 2 التي تعمل فوق الإيثريوم ، مما يتيح المعاملات الأرخص والأسرع مع الاستفادة من الأمن الأساسي للإيثريوم.\n\nيجمع الكثير من المعاملات معًا في \"التجميع\" قبل إرسالها للعيش بشكل دائم على الإيثريوم.",
+        "text": "التفاؤل هو شبكة من الطبقة الثانية تعمل فوق الإيثريوم، وتُتيح معاملات أرخص وأسرع مع الاستفادة من الأمان الأساسي للإيثريوم.\n\nتجمع الكثير من المعاملات معًا في \"التجميع\" قبل إرسالها للعيش بشكل دائم على الإيثريوم.",
         "title": "ما هو التفاؤل؟"
       },
       "polygon": {
@@ -1149,6 +1184,30 @@
         "title": "لا %{networkName} %{gasToken} تم التحقق منه",
         "text": "لن تتمكن من استخدام %{networkName} بدون %{networkName} %{gasToken}. إذا تابعت هذه العملية، لن تتمكن من السواب، الجسر أو نقل الرموز %{networkName} الخاصة بك بدون إضافة %{networkName} %{gasToken} إلى محفظتك.",
         "button": "المتابعة على أي حال"
+      },
+      "ens_primary_name": {
+        "title": "ماذا يعني ضبط اسم الENS خاصتي؟",
+        "text": "سيتمكن الناس من كتابة اسم .eth الخاص بك في التطبيقات اللامركزية بدلاً من عنوان Ethereum الكامل عندما يريدون إرسال شيء لك، وستتمكن التطبيقات اللامركزية من استخدام اسم .eth والملف الشخصي الخاص بك لعرض المعلومات عنك. يُعرف هذا أيضًا بتعيين اسم ENS الخاص بك كـ\"أساسي\"."
+      },
+      "ens_on_chain_data_warning": {
+        "title": "انتبه!",
+        "text": "سيتم تخزين البيانات التي تقدمها هنا على بلوكتشين Ethereum – مما يعني أنه سيكون مرئيًا للجميع ويمكن الوصول إليه من قبل أي شخص. لا تشارك أية بيانات لست مرتاحًا لإعلانها."
+      },
+      "ens_manager": {
+        "title": "ما هو مدير .eth؟",
+        "text": "يستطيع مدير اسم .eth ضبط وتحديث سجلاته وإنشاء النطاقات الفرعية لهذا الاسم أو إدارة تكوينه. يتم تعيين المدير من قبل مالك اسم .eth ويُعرف أيضًا بمصطلح مشرف اسم ENS."
+      },
+      "ens_owner": {
+        "title": "من هو مالك اسم .eth؟",
+        "text": "مالك الاسم .eth لديه سيطرة كاملة ونهائية على ذلك الاسم. يمكنهم نقل ملكية الاسم والسماح لشخص آخر بإدارة الاسم بدلاً عنهم إذا اختاروا ذلك (ضبط السجلات وما إلى ذلك). يُعرف المالك أيضًا باسم مسجل اسم ENS."
+      },
+      "ens_resolver": {
+        "title": "ما هو محول .eth؟",
+        "text": "المحول هو عقد يرسم من الاسم إلى المورد (مثل عناوين العملات المشفرة، تجزئة المحتوى، وما إلى ذلك). يتم توجيه المحولات بواسطة حقل المحول في السجل."
+      },
+      "ens_configuration": {
+        "title": "ماذا تعني هذه الخيارات؟",
+        "text": "عند إرسال اسم ENS إلى شخص آخر وتعيينه كمالك اسم ENS الجديد، قد ترغب في تكوينه لهم مسبقًا وتجنيبهم معاملة في المستقبل. يتيح لك Rainbow مسح أي معلومات ملف تعريف محددة حاليًا للاسم، وتكوين اسم ENS للإشارة إلى عنوان المستلم وجعل عنوان المستلم هو مدير الاسم."
       }
     },
     "fedora": {
@@ -1632,7 +1691,7 @@
         "invalid_referral_code_alert": "رمز الإحالة غير صحيح. يرجى التحقق من الرمز والمحاولة مرة أخرى.",
         "no_balance_alert": "للتسجيل في النقاط، يجب أن يكون رصيد المحفظة لديك غير صفر.",
         "referral_link_is_ready": "رابط الإحالة الخاص بك جاهز",
-        "referral_link_bonus_text": "قم بتغريد رابط الإحالة الخاص بك واحصل على 250 نقطة إضافية",
+        "referral_link_bonus_text": "غرد رابط إحالتك وستحصل على 10٪ من النقاط التي يكسبها أي شخص تشير إليه",
         "referral_link_bonus_text_extended": "بالإضافة إلى أنك ستربح 10% من النقاط التي يحصل عليها أي شخص تقوم بإحالته",
         "complete_onboarding": "تم",
         "share_to_x": "مشاركة إلى X",
@@ -1986,6 +2045,9 @@
       "rewards": "المكافآت",
       "pools": "المجمعات"
     },
+    "profile": {
+      "title": "النشاط"
+    },
     "savings": {
       "deposit": "إيداع",
       "deposit_from_wallet": "الإيداع من المحفظة",
@@ -2033,20 +2095,62 @@
       "backup_google_account": "حساب جوجل",
       "currency": {
         "title": "العملة",
-        "ETH": "إيثيريوم",
-        "USD": "دولار الولايات المتحدة",
-        "EUR": "اليورو",
-        "GBP": "الجنيه البريطاني",
-        "AUD": "الدولار الأسترالي",
-        "CNY": "اليوان الصيني",
-        "KRW": "الوون الكوري الجنوبي",
-        "JPY": "الين الياباني",
-        "RUB": "الروبل الروسي",
-        "INR": "الروبية الهندية",
-        "TRY": "الليرة التركية",
-        "CAD": "الدولار الكندي",
-        "NZD": "الدولار النيوزيلندي",
-        "ZAR": "الراند الجنوب أفريقي"
+        "ETH": {
+          "label": "إيثيريوم",
+          "code": "ETH"
+        },
+        "USD": {
+          "label": "دولار الولايات المتحدة",
+          "code": "USD"
+        },
+        "EUR": {
+          "label": "اليورو",
+          "code": "EUR"
+        },
+        "GBP": {
+          "label": "الجنيه البريطاني",
+          "code": "GBP"
+        },
+        "AUD": {
+          "label": "الدولار الأسترالي",
+          "code": "AUD"
+        },
+        "CNY": {
+          "label": "اليوان الصيني",
+          "code": "CNY"
+        },
+        "KRW": {
+          "label": "الوون الكوري الجنوبي",
+          "code": "KRW"
+        },
+        "JPY": {
+          "label": "الين الياباني",
+          "code": "JPY"
+        },
+        "RUB": {
+          "label": "الروبل الروسي",
+          "code": "RUB"
+        },
+        "INR": {
+          "label": "الروبية الهندية",
+          "code": "INR"
+        },
+        "TRY": {
+          "label": "الليرة التركية",
+          "code": "TRY"
+        },
+        "CAD": {
+          "label": "الدولار الكندي",
+          "code": "CAD"
+        },
+        "NZD": {
+          "label": "الدولار النيوزيلندي",
+          "code": "NZD"
+        },
+        "ZAR": {
+          "label": "الراند الجنوب أفريقي",
+          "code": "ZAR"
+        }
       },
       "app_icon": "أيقونة التطبيق",
       "developer": "إعدادات المطور",
@@ -2829,6 +2933,7 @@
         "find_a_code": "العثور على رمز للمسح",
         "qr_1_app_connected": "تطبيق 1 متصل",
         "qr_multiple_apps_connected": "%{appsConnectedCount} تطبيقات متصلة",
+        "scan_to_connect": "مسح للاتصال",
         "scan_to_pay_or_connect": "المسح للدفع أو الاتصال",
         "simulator_mode": "وضع المحاكاة",
         "sorry_could_not_be_recognized": "عذراً، لم يتم التعرف على هذا الرمز الشريطي QR.",
@@ -2888,6 +2993,7 @@
         "sending_title": "إرسال",
         "you_own_this_wallet": "أنت تمتلك هذه المحفظة",
         "first_time_send": "أول مرة ترسل",
+        "previous_send": "%{number} إرسال سابق",
         "previous_sends": "%{number} إرسال سابق"
       },
       "wallet_connect": {
@@ -3181,7 +3287,8 @@
       "show_less": "اعرض أقل",
       "more": "أكثر",
       "show_more": "المزيد من الشبكات",
-      "all_networks": "جميع الشبكات"
+      "all_networks": "جميع الشبكات",
+      "search": "بحث"
     },
     "token_launcher": {
       "airdrop": {
@@ -3340,10 +3447,78 @@
         "to_claim_on": "للمطالبة على %{network}",
         "view_coin": "عرض العملة",
         "you": "أنت"
+      },
+      "errors": {
+        "header": "خطأ في إطلاق الرمز",
+        "api_request_failed": "فشل طلب API",
+        "api_response_invalid": "استجابة API غير صالحة",
+        "contract_interaction_failed": "فشل التفاعل مع العقد",
+        "gas_estimation_failed": "فشل تقدير الغاز",
+        "insufficient_funds": "أموال غير كافية",
+        "submission_details_missing": "تفاصيل الإرسال مفقودة",
+        "transaction_rejected": "تم رفض المعاملة",
+        "transaction_failed": "فشلت المعاملة",
+        "transaction_simulation_failed": "فشلت محاكاة المعاملة",
+        "unknown_error": "خطأ غير معروف",
+        "wallet_connection_error": "خطأ في اتصال المحفظة",
+        "invalid_params": "معلمات غير صالحة",
+        "missing_required_param": "المعلمات المطلوبة مفقودة"
       }
     },
     "done": "تم",
     "copy": "نسخ",
-    "paste": "لصق"
+    "paste": "لصق",
+    "market_data": {
+      "vol": "الحجم",
+      "price": "السعر",
+      "mcap": "رأس المال السوقي"
+    },
+    "king_of_hill": {
+      "title": "منصة الإطلاق",
+      "launch": "إطلاق",
+      "current_king": "الملك الحالي",
+      "last_winner": "آخر فائز",
+      "no_previous_winner": "لا يوجد فائز سابق",
+      "round_ends_in": "تنتهي الجولة خلال",
+      "how_it_works": "كيف يعمل",
+      "starting_next_round": "بدء الجولة التالية",
+      "left": "المتبقي",
+      "king_of_the_hill": "ملك التل",
+      "name": "الاسم",
+      "explain_sheet": {
+        "next": "التالي",
+        "got_it": "فهمت",
+        "steps": {
+          "step_1": {
+            "title": "السباق مباشر",
+            "subtitle_parts": [
+              "الرمز صاحب أعلى",
+              " حجم الشراء ",
+              "الآن هو الملك الحالي."
+            ]
+          },
+          "step_2": {
+            "title": "تاج واحد يوميًا",
+            "subtitle_parts": [
+              "عند",
+              " منتصف الليل (12:00 صباحًا UTC)، ",
+              "يُتوَّج الرمز المتصدر فائز اليوم."
+            ]
+          },
+          "step_3": {
+            "title": "اربح مكافآت",
+            "subtitle_parts": [
+              "يحصل مشترو الملك الحالي على",
+              " نقاط مضاعفة 2x."
+            ],
+            "subtitle_two_parts": [
+              "المنشئون",
+              " يكسبون نقاطًا ",
+              "عند تتويجهم."
+            ]
+          }
+        }
+      }
+    }
   }
 }
