--- a/src/languages/hi_IN.json
+++ b/src/languages/hi_IN.json
@@ -47,6 +47,7 @@
       "unknown_token": "अज्ञात टोकन"
     },
     "activity_list": {
+      "title": "गतिविधि",
       "empty_state": {
         "default_label": "अभी तक कोई लेन-देन नहीं",
         "recycler_label": "अभी तक कोई लेन-देन नहीं",
@@ -140,7 +141,7 @@
         "choose_backup_cloud_description": "अपने वॉलेट का सुरक्षित रूप से %{cloudPlatform} पर बैकअप करें ताकि यदि आप अपना डिवाइस खो दें या एक नया प्राप्त करें, तो आप इसे पुनर्स्थापित कर सकें।",
         "choose_backup_manual_description": "अपने गुप्त अनु वाक्यांश को एक सुरक्षित स्थान पर सहेजकर अपना वॉलेट मैन्युअली बैकअप करें।",
         "enable_cloud_backups_description": "यदि आप अपने वॉलेट्स का बैकअप मैन्युअली करना पसंद करते हैं, तो आप नीचे कर सकते हैं।",
-        "latest_backup": "अंतिम बैकअप: %{date}",
+        "latest_backup": "सबसे हालिया बैकअप: %{date}",
         "back_up_all_wallets_to_cloud": "सभी वॉलेट्स का बैकअप %{cloudPlatformName} पर करें",
         "most_recent_backup": "सबसे हालिया बैकअप",
         "out_of_date": "पुराना",
@@ -467,6 +468,9 @@
         "quote_error": "कोट त्रुटि",
         "no_route_found": "कोई मार्ग नहीं मिला",
         "fetching_quote": "कोट प्राप्त कर रहे हैं...",
+        "rainbow_eth_rewards": "रेनबो ETH रिवार्ड्स",
+        "merkl_claimable": "%{dappName} वाल्ट",
+        "merkl_claimable_description": "%{assetSymbols} रणनीति",
         "select_a_network": "एक नेटवर्क चुनें",
         "select_a_token": "एक टोकन का चयन करें",
         "amount_to_claim_on_network": "%{amount} को %{network} पर दावा करने के लिए",
@@ -476,6 +480,9 @@
         "claimed": "दावा किया हुआ!",
         "claiming_failed": "दावा विफल",
         "insufficient_funds": "अपर्याप्त धन",
+        "hold_to_claim": "दावे के लिए दबाए रखें",
+        "creator_lp_fees": "निर्माता LP फीस",
+        "rainbow_token_launcher": "रेनबो टोकन लॉन्चर",
         "claim_amount": "दावा %{amount}",
         "done": "हो गया",
         "try_again": "फिर से प्रयास करें",
@@ -519,38 +526,39 @@
       "alert": "अलर्ट",
       "analyze_env_variables": "ENV वेरिएबल्स का विश्लेषण करें",
       "analyze_react_query": "React Query का विश्लेषण करें",
+      "analyze_user_assets_query": "उपयोगकर्ता संपत्तियों का विश्लेषण करें",
       "applied": "लागू किया गया",
       "backups_deleted_successfully": "बैकअप सफलतापूर्वक हटा दिए गए",
-      "clear_async_storage": "एसिंक स्टोरेज को साफ करें",
+      "clear_async_storage": "AsyncStorage साफ़ करें",
       "clear_pending_txs": "लंबित लेनदेन साफ़ करें",
       "clear_image_cache": "छवि कैश साफ करें",
       "clear_image_metadata_cache": "छवि मेटाडाटा कैश साफ करें",
-      "clear_local_storage": "लोकल स्टोरेज को साफ करें",
-      "clear_mmkv_storage": "MMKV स्टोरेज को साफ करें",
+      "clear_local_storage": "लोकल स्टोरेज साफ़ करें",
+      "clear_mmkv_storage": "MMKV स्टोरेज साफ़ करें",
       "clear_react_query_cache": "React Query कैश साफ़ करें",
-      "connect_to_anvil": "Anvil से कनेक्ट करें",
+      "connect_to_anvil": "Anvil से जुड़ें",
       "copy_fcm_token": "FCM टोकन कॉपी करें",
       "copy_log_lines": "लॉग लाइन्स कॉपी करें",
       "copy_signing_wallet_address": "हस्ताक्षर वॉलेट पता कॉपी करें",
-      "disconnect_to_anvil": "हार्डहैट से डिस्कनेक्ट करें",
-      "crash_app_render_error": "ऐप्र्प्लिकेशन क्रैश करें (रेंडर त्रुटि)",
+      "disconnect_to_anvil": "Anvil से डिस्कनेक्ट करें",
+      "crash_app_render_error": "ऐप क्रैश करें (रेंडर त्रुटि)",
       "enable_testnets": "टेस्टनेट्स सक्षम करें",
-      "installing_update": "अद्यतन स्थापित कर रहा है",
-      "navigation_entry_point": "नेविगेशन प्रवेश बिंदु",
-      "no_update": "कोई अद्यतन नहीं",
+      "installing_update": "अपडेट इंस्टॉल कर रहा है",
+      "navigation_entry_point": "नेविगेशन एंट्री पॉइंट",
+      "no_update": "कोई अपडेट नहीं है",
       "not_applied": "लागू नहीं किया गया",
       "notifications_debug": "सूचनाएं डीबग",
-      "remove_all_backups": "सभी बैकअप हटाएं",
+      "remove_all_backups": "सभी बैकअप्स को हटाएं",
       "keychain": {
         "menu_title": "कीचेन रीसेट करें",
         "delete_wallets": "सभी वॉलेट्स हटाएं",
         "alert_title": "सतर्क रहें!",
         "alert_body": "🚨🚨🚨 \nयह आपके सभी वॉलेट्स की प्राइवेट कुंजियाँ और डेटा को स्थायी रूप से हटा देगा, कृपया सुनिश्चित करें कि आपने प्रक्रिया की शुरुआत से पहले सभी चीजों का बैकअप बना लिया है!! \n🚨🚨🚨"
       },
-      "restart_app": "ऐप्लिकेशन पुनः आरंभ करें",
-      "reset_experimental_config": "प्रयोगात्मक कॉन्फिग रीसेट करें",
+      "restart_app": "ऍप रीस्टार्ट करें",
+      "reset_experimental_config": "प्रायोगिक कॉन्फ़िग को रीसेट करें",
       "status": "स्थिति",
-      "sync_codepush": "सिंक कोडपुश"
+      "sync_codepush": "CodePush सिंक करें"
     },
     "discover": {
       "pulse": {
@@ -559,7 +567,6 @@
         "trading_at_prefix": "व्यापार कर रहा है"
       },
       "search": {
-        "profiles": "प्रोफ़ाइल",
         "search_ethereum": "इथेरियम की सभी खोजें",
         "search_ethereum_short": "इथेरियम खोजें",
         "search": "खोज",
@@ -604,6 +611,7 @@
         "expires_in": "में समयावधि समाप्त %{minutes}m",
         "from_divider": "से",
         "to_divider": "करने के लिए",
+        "token": "टोकन",
         "view_on": "देखें %{blockExplorerName}पर",
         "view_on_etherscan": "Etherscan पर देखें",
         "copy_contract_address": "कॉंट्रैक्ट एड्रेस कॉपी करें"
@@ -654,9 +662,7 @@
         "small_market_try_smaller_amount": "छोटा बाजार — एक छोटी राशि आज़माएँ",
         "you_are_losing": "आप %{priceImpact} खो रहे हैं",
         "you_are_losing_prefix": "आप खो रहे हैं",
-        "no_data": "बाजार मूल्य अज्ञात",
-        "label": "संभावित हानि",
-        "no_data_subtitle": "यदि आप जारी रखने का निर्णय लेते हैं, तो सुनिश्चित करें कि आप उद्धृत राशि से संतुष्ट हैं"
+        "label": "संभावित हानि"
       },
       "source": {
         "rainbow": "ऑटो",
@@ -727,6 +733,7 @@
           "circulating_supply": "प्रचलन आपूर्ति",
           "max_supply": "अधिकतम आपूर्ति",
           "fully_diluted_valuation": "पूरी तरह से विलय का मूल्यांकन",
+          "created_by": "द्वारा बनाया गया",
           "market_cap": "मार्केट कैप",
           "created": "निर्मित",
           "volume_24_hours": "24 घंटे की मात्रा",
@@ -747,9 +754,35 @@
         "about": {
           "title": "के बारे में",
           "what_is": "%{assetName} क्या है?"
+        },
+        "history": {
+          "title": "इतिहास",
+          "tabs": {
+            "all": "सभी",
+            "buys": "खरीद",
+            "sells": "बेच"
+          },
+          "more": "अधिक",
+          "less": "कम",
+          "bought": "खरीदा",
+          "sold": "बेच दिया",
+          "received": "प्राप्त किया",
+          "sent": "भेजा",
+          "unknown": "अज्ञात"
         }
       },
       "chart": {
+        "candlestick": {
+          "candle_field_labels": {
+            "c": "बंद करें",
+            "h": "H",
+            "l": "एल",
+            "o": "खोलें",
+            "t": "",
+            "v": "V"
+          },
+          "no_volume_label": "कोई नहीं"
+        },
         "all_time": "सभी समय",
         "date": {
           "months": {
@@ -770,7 +803,7 @@
         "no_chart_data": "कोई चार्ट डेटा नहीं",
         "no_price_data": "कोई मूल्य डेटा नहीं",
         "past_timespan": "भूतकाल %{formattedTimespan}",
-        "today": "आज",
+        "today": "बीता हुआ दिन",
         "token_pool": "%{tokenName} पूल"
       },
       "contact_profile": {
@@ -929,6 +962,8 @@
       "farcaster_title": "आपने अनलॉक कर लिया है\nरेनबो कास्ट",
       "redacted_description": "सच्चे Gdupi एनजॉयर्स के लिए एक अनन्य Rainbow आइकन।",
       "redacted_title": "आपने\nरेडैक्टेड रेनबो को अनलॉक कर दिया",
+      "baggy_description": "सड़कों से लेकर चेन तक, यह छोटा बैग आपकी पोर्टेबल रेनबो वाइब्स की खुराक को पकड़े हुए है। रंगों का स्वाद लें, और अंतर महसूस करें।",
+      "baggy_title": "आपने अनलॉक कर लिया है\n रेनबो बैगी",
       "button": "आइकन पकड़ें"
     },
     "explain": {
@@ -936,7 +971,7 @@
         "text": "%{fromNetwork}के लिए, इंद्रधनुष वह राशि तैयार नहीं कर सकता %{outputToken} आपको प्राप्त करने के लिए आधारित स्वैप। \n\n आपको स्वैप करने के लिए %{inputToken} राशि दर्ज करने की कोशिश करें.",
         "title": "%{inputToken} बजाय दर्ज करें",
         "title_crosschain": "%{fromNetwork} %{inputToken} के बजाय दर्ज करें",
-        "text_crosschain": "Rainbow आपको प्राप्त करने की इच्छा रखने वाली %{outputToken} राशि के आधार पर swaps तैयार नहीं कर सकता। \n\n बजाय आप %{inputToken} राशि दर्ज करने की कोशिश करें जिसे आप swap करना चाहते हैं।",
+        "text_crosschain": "रेनबो आपको प्राप्त करने की इच्छा रखने वाली %{outputToken} राशि के आधार पर swaps तैयार नहीं कर सकता। \n\n बजाय आप %{inputToken} राशि दर्ज करने की कोशिश करें जिसे आप swap करना चाहते हैं।",
         "text_bridge": "Rainbow आपको प्राप्त करने की इच्छा रखने वाली %{outputToken} राशि के आधार पर एक bridge तैयार नहीं कर सकता %{toNetwork} गंतव्य पर। \n\n बजाय आप %{fromNetwork} %{inputToken} राशि दर्ज करने की कोशिश करें जिसे आप bridge करना चाहते हैं।",
         "title_empty": "एक टोकन चुनें"
       },
@@ -1040,7 +1075,7 @@
         "title": "लीनेया क्या है?"
       },
       "opmainnet": {
-        "text": "आशावाद एक परत 2 नेटवर्क है जो ईथेरियम के ऊपर चलता है, यह सस्ते और तेज़ लेनदेन को सक्षम करता है जबकि अभी भी ईथेरियम की आधारभूत सुरक्षा से लाभ उठाता है।\n\nयह एक \"रोल अप\" में कई लेनदेनों को एक साथ बंधेली करता है पहले उन्हें ईथेरियम पर स्थायी रूप से रहने के लिए भेजता है।",
+        "text": "आशावाद एक परत २ नेटवर्क है जो ईथेरियम के ऊपर चलता है, यह सस्ती और तेज़ लेनदेन को सक्षम करता है जबकि अभी भी ईथेरियम की आधारभूत सुरक्षा से लाभ उठाता है। यह एक \"रोल अप\" में कई लेनदेन को एक साथ बंधेली करता है, पहले उन्हें ईथेरियम पर स्थायी रूप से रहने के लिए भेजता है।",
         "title": "आशावाद क्या है?"
       },
       "polygon": {
@@ -1149,6 +1184,30 @@
         "title": "कोई %{networkName} %{gasToken} पता चला",
         "text": "आप %{networkName} का उपयोग %{networkName} %{gasToken}के बिना नहीं कर पाएंगे। अगर आप इस लेन-देन के साथ चलते हैं, तो आपको अपने %{networkName} टोकन को स्वैप, पुल या ट्रांसफर करने में सक्षम नहीं हो पाएंगे, जब तक आप अपने वॉलेट में %{networkName} %{gasToken} नहीं जोड़ते हैं।",
         "button": "फिर भी आगे बढ़ें"
+      },
+      "ens_primary_name": {
+        "title": "मेरे ENS नाम सेट करने का क्या अर्थ है?",
+        "text": "लोग जब आपको कुछ भेजना चाहेंगे तो आपके पूर्ण Ethereum पते के बजाय आपकी .eth नाम dApps में टाइप कर सकेंगे, और dApps आपके .eth नाम और प्रोफाइल का उपयोग करके आपकी जानकारी प्रदर्शित कर सकेंगे। इसे आपका ENS नाम \"प्राथमिक\" सेट करना भी कहा जाता है।"
+      },
+      "ens_on_chain_data_warning": {
+        "title": "ध्यान दें!",
+        "text": "आप यहाँ जो डेटा प्रदान करते हैं, वह Ethereum ब्लॉकचेन पर संग्रहीत किया जाएगा - अर्थात यह सभी के लिए दृश्यमान और किसी के भी द्वारा सुलभ होगा। ऐसा कोई डेटा साझा न करें जिससे आप सार्वजनिक करने में असहज हों।"
+      },
+      "ens_manager": {
+        "title": "क्या है .eth प्रबंधक?",
+        "text": ".eth नाम का प्रबंधक इसके अभिलेख सेट और अपडेट कर सकता है, उस नाम के उपडोमेन बना सकता है या उसकी कॉन्फ़िगरेशन प्रबंधित कर सकता है। प्रबंधक को .eth नाम के धारक द्वारा सेट किया जाता है और इसे ENS नाम का नियंत्रक भी कहा जाता है।"
+      },
+      "ens_owner": {
+        "title": "क्या है .eth नाम धारक?",
+        "text": ".eth नाम का मालिक उस नाम पर पूर्ण और अंतिम नियंत्रण रखता है। वे नाम का स्वामित्व हस्तांतरित कर सकते हैं और यदि वे चाहें तो किसी और को नाम का प्रबंधन करने की अनुमति दे सकते हैं (विवरण सेट करना आदि)। मालिक को भी ENS नाम का पंजीयक कहा जाता है।"
+      },
+      "ens_resolver": {
+        "title": ".eth रेसॉल्वर क्या होता है?",
+        "text": "रेसॉल्वर एक अनुबंध है जो नाम से संसाधन (जैसे, क्रिप्टोक्यूरेंसी पते, सामग्री हैश आदि) को मैप करता है। रेसॉल्वर को रजिस्टर के रेसॉल्वर फील्ड द्वारा इंगित किया जाता है।"
+      },
+      "ens_configuration": {
+        "title": "ये विकल्प क्या मतलब हैं?",
+        "text": "जब किसी ENS नाम को किसी और को भेजा जाता है और उन्हें नया ENS नाम का मालिक बनाया जाता है, तब आप उन्हें पहले से ही इसे कॉन्फ़िगर करना चाह सकते हैं और उन्हें भविष्य में एक लेनदेन से बचा सकते हैं। Rainbow आपको नाम के लिए वर्तमान में सेट की गई प्रोफ़ाइल जानकारी को साफ़ करने, ENS नाम को प्राप्तकर्ता के पते पर इंगित करने और प्राप्तकर्ता पते को नाम का प्रबंधक बनाने की अनुमति देता है।"
       }
     },
     "fedora": {
@@ -1632,7 +1691,7 @@
         "invalid_referral_code_alert": "अमान्य रेफ़रल कोड। कृपया अपना कोड जाँचें और पुनः प्रयास करें।",
         "no_balance_alert": "पॉइंट्स में नामांकन के लिए, आपके वॉलेट बैलेंस में शून्य से अधिक होना आवश्यक है।",
         "referral_link_is_ready": "आपका रेफ़रल लिंक तैयार है",
-        "referral_link_bonus_text": "अपने रेफ़रल लिंक को ट्वीट करें और अतिरिक्त 250 अंक प्राप्त करें",
+        "referral_link_bonus_text": "अपने रेफरल लिंक को ट्वीट करें और आप अपने द्वारा संदर्भित किसी भी व्यक्ति द्वारा अर्जित अंकों का 10% अर्जित करेंगे",
         "referral_link_bonus_text_extended": "प्लस आपको जो कोई आपके रेफ़र करेगा उसके अर्जित किए गए अंकों का 10% भी मिलेगा",
         "complete_onboarding": "हो गया",
         "share_to_x": "X को शेयर करें",
@@ -1938,7 +1997,7 @@
       "rewards_claimed": "साप्ताहिक पुरस्कारों का दावा किया",
       "refreshes_next_week": "अगले सप्ताह ताजगी करता है",
       "all_rewards_claimed": "सभी पुरस्कार इस सप्ताह का दावा किया गया है",
-      "rainbow_users_claimed": "रेनबो उपयोगकर्ताओं ने %{amount}का दावा किया",
+      "rainbow_users_claimed": "रेनबो उपयोगकर्ताओं ने %{amount} का दावा किया",
       "refreshes_in_with_days": "%{days} दिनों में ताजगी होती है %{hours} घंटे",
       "refreshes_in_without_days": "ताजगी होती है %{hours} घंटे",
       "percent": "%{percent}% पुरस्कार",
@@ -1985,6 +2044,9 @@
       "stakes": "शेयर जमा किया है",
       "rewards": "इनाम",
       "pools": "पूल्स"
+    },
+    "profile": {
+      "title": "गतिविधि"
     },
     "savings": {
       "deposit": "जमा",
@@ -2033,20 +2095,62 @@
       "backup_google_account": "Google खाता",
       "currency": {
         "title": "मुद्रा",
-        "ETH": "ईथेरियम",
-        "USD": "अमेरिकी डॉलर",
-        "EUR": "यूरो",
-        "GBP": "ब्रिटिश पाउंड",
-        "AUD": "ऑस्ट्रेलियन डॉलर",
-        "CNY": "चीनी युआन",
-        "KRW": "दक्षिण कोरियाई वॉन",
-        "JPY": "जापानी येन",
-        "RUB": "रूसी रूबल",
-        "INR": "भारतीय रुपया",
-        "TRY": "तुर्की लीरा",
-        "CAD": "कैनेडियन डॉलर",
-        "NZD": "न्यूज़ीलैंड डॉलर",
-        "ZAR": "दक्षिण अफ़्रीकी रैंड"
+        "ETH": {
+          "label": "ईथेरियम",
+          "code": "ETH"
+        },
+        "USD": {
+          "label": "अमेरिकी डॉलर",
+          "code": "USD"
+        },
+        "EUR": {
+          "label": "यूरो",
+          "code": "EUR"
+        },
+        "GBP": {
+          "label": "ब्रिटिश पाउंड",
+          "code": "GBP"
+        },
+        "AUD": {
+          "label": "ऑस्ट्रेलियन डॉलर",
+          "code": "AUD"
+        },
+        "CNY": {
+          "label": "चीनी युआन",
+          "code": "CNY"
+        },
+        "KRW": {
+          "label": "दक्षिण कोरियाई वॉन",
+          "code": "KRW"
+        },
+        "JPY": {
+          "label": "जापानी येन",
+          "code": "JPY"
+        },
+        "RUB": {
+          "label": "रूसी रूबल",
+          "code": "RUB"
+        },
+        "INR": {
+          "label": "भारतीय रुपया",
+          "code": "INR"
+        },
+        "TRY": {
+          "label": "तुर्की लीरा",
+          "code": "TRY"
+        },
+        "CAD": {
+          "label": "कैनेडियन डॉलर",
+          "code": "CAD"
+        },
+        "NZD": {
+          "label": "न्यूज़ीलैंड डॉलर",
+          "code": "NZD"
+        },
+        "ZAR": {
+          "label": "दक्षिण अफ़्रीकी रैंड",
+          "code": "ZAR"
+        }
       },
       "app_icon": "ऐप आइकन",
       "developer": "डेवलपर सेटिंग्स",
@@ -2829,6 +2933,7 @@
         "find_a_code": "स्कैन करने के लिए एक कोड ढूंढें",
         "qr_1_app_connected": "1 जुड़ा हुआ एप्लिकेशन",
         "qr_multiple_apps_connected": "%{appsConnectedCount} जुड़े हुए एप्लिकेशन",
+        "scan_to_connect": "स्कैन करने के लिए कनेक्ट करें",
         "scan_to_pay_or_connect": "भुगतान करने या जुड़ने के लिए स्कैन करें",
         "simulator_mode": "सिमुलेटर मोड",
         "sorry_could_not_be_recognized": "क्षमा करें, इस QR कोड को पहचाना नहीं जा सका।",
@@ -2888,6 +2993,7 @@
         "sending_title": "भेज रहा है",
         "you_own_this_wallet": "आपका यह वॉलेट है",
         "first_time_send": "पहली बार भेजें",
+        "previous_send": "%{number} पिछला भेजा गया",
         "previous_sends": "%{number} पिछला भेजा गया"
       },
       "wallet_connect": {
@@ -3181,7 +3287,8 @@
       "show_less": "कम दिखाएँ",
       "more": "अधिक",
       "show_more": "अधिक नेटवर्क्स",
-      "all_networks": "सभी नेटवर्क"
+      "all_networks": "सभी नेटवर्क",
+      "search": "खोज"
     },
     "token_launcher": {
       "airdrop": {
@@ -3340,10 +3447,78 @@
         "to_claim_on": "%{network} पर दावा करने के लिए",
         "view_coin": "सिक्का देखें",
         "you": "तुम"
+      },
+      "errors": {
+        "header": "टोकन लांच करते समय त्रुटि",
+        "api_request_failed": "API अनुरोध विफल रहा",
+        "api_response_invalid": "API प्रतिक्रिया अमान्य",
+        "contract_interaction_failed": "अनुबंध संवाद विफल रहा",
+        "gas_estimation_failed": "गैस अनुमान विफल",
+        "insufficient_funds": "अपर्याप्त धन",
+        "submission_details_missing": "प्रस्तुति विवरण गायब",
+        "transaction_rejected": "लेनदेन अस्वीकृत",
+        "transaction_failed": "लेन-देन विफल",
+        "transaction_simulation_failed": "लेन-देन सिमुलेशन विफल",
+        "unknown_error": "अज्ञात त्रुटि",
+        "wallet_connection_error": "वॉलेट कनेक्शन त्रुटि",
+        "invalid_params": "अमान्य पैरामीटर",
+        "missing_required_param": "आवश्यक पैरामीटर अनुपलब्ध"
       }
     },
     "done": "हो गया",
     "copy": "कॉपी",
-    "paste": "चिपकाएं"
+    "paste": "चिपकाएं",
+    "market_data": {
+      "vol": "वॉल्यूम",
+      "price": "कीमत",
+      "mcap": "एमसीएपी"
+    },
+    "king_of_hill": {
+      "title": "लॉन्चपैड",
+      "launch": "लॉन्च",
+      "current_king": "वर्तमान किंग",
+      "last_winner": "अंतिम विजेता",
+      "no_previous_winner": "पिछला कोई विजेता नहीं",
+      "round_ends_in": "राउंड समाप्त होने में",
+      "how_it_works": "कैसे काम करता है",
+      "starting_next_round": "अगला राउंड शुरू हो रहा है",
+      "left": "बचा हुआ",
+      "king_of_the_hill": "किंग ऑफ़ द हिल",
+      "name": "नाम",
+      "explain_sheet": {
+        "next": "अगला",
+        "got_it": "समझ गया",
+        "steps": {
+          "step_1": {
+            "title": "रेस लाइव है",
+            "subtitle_parts": [
+              "सबसे अधिक वाला टोकन",
+              " खरीद वॉल्यूम ",
+              "अभी वर्तमान किंग है।"
+            ]
+          },
+          "step_2": {
+            "title": "एक ताज एक दिन में",
+            "subtitle_parts": [
+              "पर",
+              " मध्यरात्रि (12:00 AM UTC), ",
+              "प्रमुख टोकन को दैनिक विजेता घोषित किया जाता है।"
+            ]
+          },
+          "step_3": {
+            "title": "पुरस्कार जीतें",
+            "subtitle_parts": [
+              "वर्तमान किंग के खरीदारों को मिलते हैं",
+              " 2x अंक।"
+            ],
+            "subtitle_two_parts": [
+              "निर्माता",
+              " अंक कमाते हैं ",
+              "विजेता घोषित होने पर।"
+            ]
+          }
+        }
+      }
+    }
   }
 }
