--- a/src/languages/th_TH.json
+++ b/src/languages/th_TH.json
@@ -47,6 +47,7 @@
       "unknown_token": "โทเคนที่ไม่รู้จัก"
     },
     "activity_list": {
+      "title": "กิจกรรม",
       "empty_state": {
         "default_label": "ยังไม่มีการทำธุรกรรม",
         "recycler_label": "ยังไม่มีการทำธุรกรรม",
@@ -140,7 +141,7 @@
         "choose_backup_cloud_description": "สำรองข้อมูลกระเป๋าสตางค์ของคุณไปยัง %{cloudPlatform} อย่างปลอดภัยเพื่อให้คุณสามารถคืนค่าได้หากคุณสูญเสียอุปกรณ์หรือได้อุปกรณ์ใหม่",
         "choose_backup_manual_description": "สำรองข้อมูลกระเป๋าสตางค์ของคุณด้วยตนเองโดยการบันทึกวลีลับของคุณในที่ปลอดภัย",
         "enable_cloud_backups_description": "หากคุณต้องการสำรองข้อมูลกระเป๋าสตางค์ของคุณด้วยตนเอง คุณสามารถทำได้ที่ด้านล่าง",
-        "latest_backup": "การสำรองข้อมูลครั้งล่าสุด: %{date}",
+        "latest_backup": "การสำรองข้อมูลล่าสุด: %{date}",
         "back_up_all_wallets_to_cloud": "สำรองข้อมูลกระเป๋าสตางค์ทั้งหมดไปยัง %{cloudPlatformName}",
         "most_recent_backup": "การสำรองข้อมูลล่าสุด",
         "out_of_date": "หมดอายุ",
@@ -467,6 +468,9 @@
         "quote_error": "ข้อผิดพลาดของราคาที่เสนอ",
         "no_route_found": "ไม่พบเส้นทาง",
         "fetching_quote": "กำลังดึงข้อมูลราคาเสนอ...",
+        "rainbow_eth_rewards": "รับรางวัล ETH",
+        "merkl_claimable": "%{dappName} Vault",
+        "merkl_claimable_description": "%{assetSymbols} กลยุทธ์",
         "select_a_network": "เลือกเครือข่าย",
         "select_a_token": "เลือกโทเค็น",
         "amount_to_claim_on_network": "%{amount} ที่ต้องเคลมบน %{network}",
@@ -476,6 +480,9 @@
         "claimed": "เคลมแล้ว!",
         "claiming_failed": "การเรียกร้องล้มเหลว",
         "insufficient_funds": "เงินทุนไม่เพียงพอ",
+        "hold_to_claim": "กดค้างเพื่อรับแบบอัตโนมัติ",
+        "creator_lp_fees": "ค่าธรรมเนียมผู้สร้าง LP",
+        "rainbow_token_launcher": "Rainbow Token Launcher",
         "claim_amount": "เคลม %{amount}",
         "done": "เสร็จสิ้น",
         "try_again": "ลองใหม่",
@@ -519,38 +526,39 @@
       "alert": "เตือน",
       "analyze_env_variables": "วิเคราะห์ตัวแปร ENV",
       "analyze_react_query": "วิเคราะห์ React Query",
+      "analyze_user_assets_query": "วิเคราะห์ Query ผู้ใช้งานสินทรัพย์",
       "applied": "ที่ปรับใช้แล้ว",
-      "backups_deleted_successfully": "การลบการสำรองข้อมูลสำเร็จ",
-      "clear_async_storage": "ล้าง async storage",
+      "backups_deleted_successfully": "ลบการสำรองข้อมูลเรียบร้อยแล้ว",
+      "clear_async_storage": "ล้างข้อมูล AsyncStorage",
       "clear_pending_txs": "ล้างธุรกรรมที่รอดำเนินการ",
       "clear_image_cache": "ล้างแคชภาพ",
       "clear_image_metadata_cache": "ล้างแคชข้อมูลภาพ",
-      "clear_local_storage": "ล้าง local storage",
-      "clear_mmkv_storage": "ล้าง MMKV storage",
+      "clear_local_storage": "ล้างพื้นที่เก็บข้อมูลท้องถิ่น",
+      "clear_mmkv_storage": "ล้างพื้นที่เก็บข้อมูล MMKV",
       "clear_react_query_cache": "ล้างแคช React Query",
-      "connect_to_anvil": "เชื่อมต่อกับ anvil",
+      "connect_to_anvil": "เชื่อมต่อกับ Anvil",
       "copy_fcm_token": "คัดลอก FCM Token",
       "copy_log_lines": "คัดลอกบรรทัดบันทึก",
       "copy_signing_wallet_address": "คัดลอกที่อยู่กระเป๋าเงินในการลงนาม",
-      "disconnect_to_anvil": "ตัดการเชื่อมต่อจาก Anvil",
-      "crash_app_render_error": "คว่ำ app (render error)",
+      "disconnect_to_anvil": "ยกเลิกการเชื่อมต่อจาก Anvil",
+      "crash_app_render_error": "แอปล้มเหลว (Render Error)",
       "enable_testnets": "เปิดใช้งาน Testnets",
-      "installing_update": "กำลังติดตั้งการอัปเดต",
+      "installing_update": "กำลังติดตั้งอัปเดต",
       "navigation_entry_point": "จุดเริ่มต้นการนำทาง",
       "no_update": "ไม่มีการอัปเดต",
       "not_applied": "ไม่ถูกนำไปใช้",
       "notifications_debug": "การดีบักการแจ้งเตือน",
-      "remove_all_backups": "ลบการสำรองข้อมูลทั้งหมด",
+      "remove_all_backups": "ลบข้อมูลสำรองทั้งหมด",
       "keychain": {
         "menu_title": "รีเซ็ต Keychain",
-        "delete_wallets": "ลบกระเป๋าเงินทั้งหมด",
+        "delete_wallets": "ลบกระเป๋าสตางค์",
         "alert_title": "ระวัง!",
         "alert_body": "🚨🚨🚨 \nขั้นตอนนี้จะลบคีย์ส่วนตัวและข้อมูลของกระเป๋าเงินของคุณอย่างถาวร กรุณาตรวจสอบว่าคุณได้สำรองข้อมูลทั้งหมดก่อนที่จะดำเนินการต่อ!! \n🚨🚨🚨"
       },
-      "restart_app": "รีสตาร์ทแอป",
-      "reset_experimental_config": "รีเซ็ตการกำหนดค่าทดลอง",
+      "restart_app": "เริ่มแอปใหม่",
+      "reset_experimental_config": "ตั้งค่าคอนฟิกการทดลองใหม่",
       "status": "สถานะ",
-      "sync_codepush": "ซิงค์โค้ดพุช"
+      "sync_codepush": "ซิงค์ CodePush"
     },
     "discover": {
       "pulse": {
@@ -559,7 +567,6 @@
         "trading_at_prefix": "การซื้อขายที่"
       },
       "search": {
-        "profiles": "โปรไฟล์",
         "search_ethereum": "ค้นหาเอเธอเรียมทั้งหมด",
         "search_ethereum_short": "ค้นหาเอเธอเรียม",
         "search": "ค้นหา",
@@ -604,6 +611,7 @@
         "expires_in": "หมดอายุใน %{minutes}นาที",
         "from_divider": "จาก",
         "to_divider": "ไปยัง",
+        "token": "โทเค็น",
         "view_on": "ดูบน %{blockExplorerName}",
         "view_on_etherscan": "ดูบน Etherscan",
         "copy_contract_address": "คัดลอกที่อยู่สัญญา"
@@ -647,16 +655,14 @@
         },
         "unknown_price": {
           "title": "ไม่ทราบมูลค่าตลาด",
-          "description": "หากคุณตัดสินใจดำเนินการต่อ โปรดแน่ใจว่าคุณพอใจกับจำนวนที่ได้รับการเสนอราคา"
+          "description": "หากคุณตัดสินใจดำเนินการต่อ โปรดแน่ใจว่าคุณพอใจกับจำนวนที่ได้รับการเสนอราคา},{"
         },
         "losing_prefix": "กำลังสูญเสีย",
         "small_market": "ตลาดเล็ก",
         "small_market_try_smaller_amount": "ตลาดเล็ก - ลองปริมาณที่น้อยกว่า",
         "you_are_losing": "คุณสูญเสีย %{priceImpact}",
         "you_are_losing_prefix": "คุณกำลังสูญเสีย",
-        "no_data": "ไม่ทราบมูลค่าตลาด",
-        "label": "เสี่ยงที่จะสูญเสีย",
-        "no_data_subtitle": "หากคุณตัดสินใจดำเนินการต่อ โปรดแน่ใจว่าคุณพอใจกับจำนวนที่ได้รับการเสนอราคา"
+        "label": "เสี่ยงที่จะสูญเสีย"
       },
       "source": {
         "rainbow": "อัตโนมัติ",
@@ -727,6 +733,7 @@
           "circulating_supply": "อุปทานหมุนเวียน",
           "max_supply": "ปริมาณสูงสุด",
           "fully_diluted_valuation": "ประเมินค่าตลาดแบบเต็มรูปแบบ",
+          "created_by": "สร้างโดย",
           "market_cap": "มูลค่าตามตลาด",
           "created": "สร้าง",
           "volume_24_hours": "ปริมาณ 24 ชั่วโมง",
@@ -747,9 +754,35 @@
         "about": {
           "title": "เกี่ยวกับ",
           "what_is": "%{assetName} คืออะไร?"
+        },
+        "history": {
+          "title": "ประวัติ",
+          "tabs": {
+            "all": "ทั้งหมด",
+            "buys": "การซื้อ",
+            "sells": "ขาย"
+          },
+          "more": "เพิ่มเติม",
+          "less": "น้อยลง",
+          "bought": "ซื้อแล้ว",
+          "sold": "ขายแล้ว",
+          "received": "ได้รับ",
+          "sent": "ส่ง",
+          "unknown": "ไม่ทราบ"
         }
       },
       "chart": {
+        "candlestick": {
+          "candle_field_labels": {
+            "c": "ปิด",
+            "h": "H",
+            "l": "ใหญ่",
+            "o": "เปิด",
+            "t": "",
+            "v": "V"
+          },
+          "no_volume_label": "ไม่มี"
+        },
         "all_time": "ตลอดเวลา",
         "date": {
           "months": {
@@ -770,7 +803,7 @@
         "no_chart_data": "ไม่มีข้อมูลกราฟ",
         "no_price_data": "ไม่มีข้อมูลราคา",
         "past_timespan": "อดีต %{formattedTimespan}",
-        "today": "วันนี้",
+        "today": "วันที่ผ่านมา",
         "token_pool": "%{tokenName} สระ"
       },
       "contact_profile": {
@@ -929,6 +962,8 @@
       "farcaster_title": "คุณได้ปลดล็อก\nRainbowcast",
       "redacted_description": "ไอคอน Rainbow พิเศษสำหรับผู้ที่ชื่นชอบ Gdupi แท้ๆ",
       "redacted_title": "คุณได้ปลดล็อก\nRedacted Rainbow",
+      "baggy_description": "จากท้องถนนสู่บล็อกเชน กระเป๋าใบนี้เก็บความรู้สึกแบบ Rainbow พกพาไว้ได้ สัมผัสกับสีสันแล้วรู้สึกถึงความต่าง",
+      "baggy_title": "คุณได้ปลดล็อก \n กระเป๋า Rainbow",
       "button": "ปลดล็อคไอคอน"
     },
     "explain": {
@@ -1093,7 +1128,7 @@
         "title": "ความชุ่ยไม่เพียงพอ"
       },
       "fee_on_transfer": {
-        "fragment1": "การสลับนี้จะล้มเหลวใน Rainbow เนื่องจากสัญญา %{tokenName} เพิ่มค่าธรรมเนียมเพิ่มเติม  \n\n อ่าน ",
+        "fragment1": "การสลับนี้จะล้มเหลวใน Rainbow เนื่องจากสัญญา %{tokenName} เพิ่มค่าธรรมเนียมเพิ่มเติม \n\n อ่าน ",
         "fragment2": "คู่มือของเรา",
         "fragment3": " สำหรับความช่วยเหลือในการสลับโทเคนนี้!",
         "title": "ค่าธรรมเนียมเมื่อโอนโทเคน"
@@ -1149,6 +1184,30 @@
         "title": "ไม่พบ %{networkName} %{gasToken}",
         "text": "คุณจะไม่สามารถใช้ %{networkName} หากไม่มี %{networkName} %{gasToken}. หากคุณดำเนินการแลกนี้ คุณจะไม่สามารถทำการแลก, สะพาน หรือ โอนโทเค็นของคุณ %{networkName} ได้หากไม่เพิ่ม %{networkName} %{gasToken} เข้าวอลเล็ตของคุณ.",
         "button": "ดำเนินการต่อ"
+      },
+      "ens_primary_name": {
+        "title": "การตั้งชื่อ ENS ของฉันมีความหมายว่าอย่างไร?",
+        "text": "ผู้คนจะสามารถพิมพ์ชื่อ .eth ของคุณในแอปพลิเคชันโดยไม่ต้องใช้ที่อยู่ Ethereum เต็มรูปแบบเมื่อพวกเขาต้องการส่งบางสิ่งให้คุณ และแอปพลิเคชันสามารถใช้ชื่อ .eth และโปรไฟล์ของคุณเพื่อแสดงข้อมูลเกี่ยวกับคุณได้ นี่ถือเป็นการตั้งชื่อ ENS ของคุณเป็น \"ตัวเอก\""
+      },
+      "ens_on_chain_data_warning": {
+        "title": "คำเตือน!",
+        "text": "ข้อมูลที่คุณให้ไว้ที่นี่จะถูกจัดเก็บในเครือข่าย Ethereum ดังนั้นทุกคนสามารถเข้าถึงและดูได้ อย่าแบ่งปันข้อมูลใดๆ ที่คุณไม่สบายใจจะเผยแพร่ต่อสาธารณะ"
+      },
+      "ens_manager": {
+        "title": "ผู้จัดการ .eth คืออะไร?",
+        "text": "ผู้จัดการชื่อ .eth สามารถตั้งค่าและอัพเดทบันทึกข้อมูล สร้างซับโดเมนของชื่อนั้น หรือจัดการการตั้งค่าได้ ผู้จัดการถูกตั้งโดยเจ้าของชื่อ .eth และยังรู้จักในนามของผู้ควบคุมชื่อ ENS"
+      },
+      "ens_owner": {
+        "title": "เจ้าของชื่อ .eth คืออะไร?",
+        "text": "เจ้าของชื่อ .eth มีการควบคุมเต็มที่และสิ้นสุดกับชื่อนั้น พวกเขาสามารถโอนการเป็นเจ้าของชื่อและอนุญาตให้ผู้อื่นจัดการชื่อแทนพวกเขาได้หากต้องการ (ตั้งค่าบันทึก ฯลฯ) เจ้าของยังเรียกว่าผู้ลงทะเบียนชื่อ ENS"
+      },
+      "ens_resolver": {
+        "title": "ตัวแก้ปัญหาชื่อ .eth คืออะไร?",
+        "text": "ตัวแก้ปัญหาเป็นสัญญาที่แปลงจากชื่อไปยังทรัพยากร (เช่น ที่อยู่สกุลเงินดิจิทัล, เนื้อหาแฮช ฯลฯ) ตัวแก้ปัญหาเหล่านี้ชี้โดยฟิลด์ตัวแก้ปัญหาของทะเบียน"
+      },
+      "ens_configuration": {
+        "title": "ตัวเลือกเหล่านี้หมายความว่าอย่างไร?",
+        "text": "เมื่อส่งชื่อ ENS ให้กับผู้อื่นและทำให้พวกเขาเป็นเจ้าของชื่อ ENS ใหม่ คุณอาจต้องการกำหนดค่าให้พวกเขาล่วงหน้าและประหยัดธุรกรรมในภายหน้า Rainbow ช่วยให้คุณล้างข้อมูลโปรไฟล์ที่ตั้งไว้สำหรับชื่อ ปรับชื่อ ENS ให้ชี้ไปยังที่อยู่ผู้รับ และทำให้ที่อยู่ผู้รับเป็นผู้จัดการของชื่อ"
       }
     },
     "fedora": {
@@ -1526,7 +1585,7 @@
       "claim": {
         "title": "เรียกร้องคะแนนของคุณ",
         "title_rewards_line_1": "ยินดีต้อนรับสู่",
-        "title_rewards_line_2": "Rainbow Rewards",
+        "title_rewards_line_2": "รับรางวัลจากการใช้ Rainbow ทำสิ่งต่างๆ บนเชน รับคะแนน และรับ ETH",
         "subtitle": "คะแนนของคุณมาแล้ว หากดูว่าคุณได้รับกี่คะแนน",
         "subtitle_rewards": "รับรางวัลจากการใช้ Rainbow ทำสิ่งต่างๆ บนเชน รับคะแนน และรับ ETH",
         "get_started": "เริ่มทำงาน",
@@ -1632,7 +1691,7 @@
         "invalid_referral_code_alert": "รหัสอ้างอิงไม่ถูกต้อง กรุณาตรวจสอบรหัสของท่านและลองอีกครั้ง",
         "no_balance_alert": "เพื่อลงทะเบียนในระบบ Points คุณต้องมียอดเงินในกระเป๋าที่ไม่เป็นศูนย์",
         "referral_link_is_ready": "ลิงก์อ้างอิงของคุณพร้อมแล้ว",
-        "referral_link_bonus_text": "ทวีตลิงก์อ้างอิงของคุณและรับโบนัสเพิ่ม 250 คะแนน",
+        "referral_link_bonus_text": "ทวีตลิงก์การแนะนำของคุณและคุณจะได้รับ 10% จากคะแนนที่ได้รับจากใครก็ตามที่คุณแนะนำ",
         "referral_link_bonus_text_extended": "นอกจากนี้คุณจะได้รับ 10% ของคะแนนที่ได้จากการอ้างอิงผู้อื่น",
         "complete_onboarding": "เสร็จสิ้น",
         "share_to_x": "แชร์ไปที่ X",
@@ -1715,7 +1774,7 @@
         "choose_nft": "เลือก NFT",
         "content": "เนื้อหา",
         "content_placeholder": "เพิ่มแฮชเนื้อหา",
-        "discord": "ดิสคอร์ด",
+        "discord": "Discord",
         "doge": "โดจคอยน์",
         "email": "อีเมล",
         "invalid_email": "อีเมลไม่ถูกต้อง",
@@ -1986,6 +2045,9 @@
       "rewards": "รางวัล",
       "pools": "สระน้ำ"
     },
+    "profile": {
+      "title": "กิจกรรม"
+    },
     "savings": {
       "deposit": "ฝาก",
       "deposit_from_wallet": "ฝากจากกระเป๋าเงิน",
@@ -2033,20 +2095,62 @@
       "backup_google_account": "บัญชี Google",
       "currency": {
         "title": "สกุลเงิน",
-        "ETH": "อีเธอเรียม",
-        "USD": "ดอลลาร์สหรัฐฯ",
-        "EUR": "ยูโร",
-        "GBP": "ปอนด์อังกฤษ",
-        "AUD": "ดอลลาร์ออสเตรเลีย",
-        "CNY": "หยวนจีน",
-        "KRW": "วอนเกาหลีใต้",
-        "JPY": "เยนญี่ปุ่น",
-        "RUB": "รูเบิลรัสเซีย",
-        "INR": "รูปีอินเดีย",
-        "TRY": "ลีราตุรกี",
-        "CAD": "ดอลลาร์แคนาดา",
-        "NZD": "ดอลลาร์นิวซีแลนด์",
-        "ZAR": "แรนด์แอฟริกาใต้"
+        "ETH": {
+          "label": "อีเธอเรียม",
+          "code": "ETH"
+        },
+        "USD": {
+          "label": "ดอลลาร์สหรัฐฯ",
+          "code": "USD"
+        },
+        "EUR": {
+          "label": "ยูโร",
+          "code": "EUR"
+        },
+        "GBP": {
+          "label": "ปอนด์อังกฤษ",
+          "code": "GBP"
+        },
+        "AUD": {
+          "label": "ดอลลาร์ออสเตรเลีย",
+          "code": "AUD"
+        },
+        "CNY": {
+          "label": "หยวนจีน",
+          "code": "CNY"
+        },
+        "KRW": {
+          "label": "วอนเกาหลีใต้",
+          "code": "KRW"
+        },
+        "JPY": {
+          "label": "เยนญี่ปุ่น",
+          "code": "JPY"
+        },
+        "RUB": {
+          "label": "รูเบิลรัสเซีย",
+          "code": "RUB"
+        },
+        "INR": {
+          "label": "รูปีอินเดีย",
+          "code": "INR"
+        },
+        "TRY": {
+          "label": "ลีราตุรกี",
+          "code": "TRY"
+        },
+        "CAD": {
+          "label": "ดอลลาร์แคนาดา",
+          "code": "CAD"
+        },
+        "NZD": {
+          "label": "ดอลลาร์นิวซีแลนด์",
+          "code": "NZD"
+        },
+        "ZAR": {
+          "label": "แรนด์แอฟริกาใต้",
+          "code": "ZAR"
+        }
       },
       "app_icon": "ไอคอนแอป",
       "developer": "การตั้งค่าของผู้พัฒนา",
@@ -2137,7 +2241,7 @@
         "quote_error": "ข้อผิดพลาดของราคาที่เสนอ"
       },
       "aggregators": {
-        "rainbow": "Rainbow"
+        "rainbow": "ค่าธรรมเนียม Rainbow"
       },
       "bridging": "กำลังสร้างสะพาน",
       "swapping": "กำลังแลกเปลี่ยน",
@@ -2829,6 +2933,7 @@
         "find_a_code": "ค้นหารหัสเพื่อสแกน",
         "qr_1_app_connected": "1 แอพที่เชื่อมต่อ",
         "qr_multiple_apps_connected": "%{appsConnectedCount} แอพที่เชื่อมต่อ",
+        "scan_to_connect": "สแกนเพื่อเชื่อมต่อ",
         "scan_to_pay_or_connect": "สแกนเพื่อจ่ายเงินหรือเชื่อมต่อ",
         "simulator_mode": "โหมดจำลอง",
         "sorry_could_not_be_recognized": "ขออภัย, ไม่สามารถรู้จำรหัส QR นี้ได้.",
@@ -2888,6 +2993,7 @@
         "sending_title": "การส่ง",
         "you_own_this_wallet": "คุณเป็นเจ้าของกระเป๋าสตางค์นี้",
         "first_time_send": "ส่งครั้งแรก",
+        "previous_send": "%{number} ครั้งที่ส่งก่อนหน้านี้",
         "previous_sends": "%{number} ครั้งที่ส่งก่อนหน้านี้"
       },
       "wallet_connect": {
@@ -2979,7 +3085,7 @@
         "read_only_wallet_on_signing_method": "ดูเหมือนว่าคุณกำลังใช้กระเป๋าเงินที่มีสิทธิ์แก้ไขอ่านอย่างเดียว ซึ่งไม่ได้รับอนุญาตสำหรับคำขอนี้",
         "namespaces_invalid": "มีปัญหาเกี่ยวกับ Namespaces ที่ร้องขอโดย Dapp กรุณาลองอีกครั้งหรือติดต่อทีม Rainbow และ / หรือทีม Dapp สนับสนุน",
         "request_invalid": "คำขอมีพารามิเตอร์ที่ไม่ถูกต้อง โปรดลองอีกครั้งหรือติดต่อทีมสนับสนุน Rainbow และ/หรือ ดัพ",
-        "eth_sign": "Rainbow ไม่สนับสนุน eth_sign แบบเก่าเนื่องจากมีข้อกังวลเรื่องความปลอดภัย  \n หากคุณมีคำถาม โปรดติดต่อทีมสนับสนุน Rainbow และ/หรือ dapp",
+        "eth_sign": "Rainbow ไม่สนับสนุน eth_sign แบบเก่าเนื่องจากมีข้อกังวลเรื่องความปลอดภัย \n หากคุณมีคำถาม โปรดติดต่อทีมสนับสนุน Rainbow และ/หรือ dapp",
         "request_unsupported_network": "Rainbow ไม่รองรับเครือข่ายที่ระบุไว้ในคำขอนี้.",
         "request_unsupported_methods": "วิธีการ RPC ที่ระบุในคำขอนี้ไม่ได้รับการสนับสนุนโดย Rainbow",
         "no_accounts_found": "ไม่พบบัญชีในพื้นที่ที่ได้รับการอนุมัติ"
@@ -3143,7 +3249,7 @@
       "filters": {
         "categories": {
           "TRENDING": "เทรนด์",
-          "RAINBOW": "Rainbow",
+          "RAINBOW": "ค่าธรรมเนียม Rainbow",
           "NEW": "ใหม่",
           "FARCASTER": "ฟาร์คาสเตอร์"
         },
@@ -3181,7 +3287,8 @@
       "show_less": "แสดงน้อยลง",
       "more": "เพิ่มเติม",
       "show_more": "เครือข่ายเพิ่มเติม",
-      "all_networks": "ทุกเครือข่าย"
+      "all_networks": "ทุกเครือข่าย",
+      "search": "ค้นหา"
     },
     "token_launcher": {
       "airdrop": {
@@ -3340,10 +3447,78 @@
         "to_claim_on": "เพียงรับบน %{network}",
         "view_coin": "ดูเหรียญ",
         "you": "คุณ"
+      },
+      "errors": {
+        "header": "ข้อผิดพลาดในการเปิดตัวโทเค็น",
+        "api_request_failed": "คำขอ API ล้มเหลว",
+        "api_response_invalid": "การตอบกลับ API ไม่ถูกต้อง",
+        "contract_interaction_failed": "การโต้ตอบสัญญาล้มเหลว",
+        "gas_estimation_failed": "การประมาณการค่าแก๊สล้มเหลว",
+        "insufficient_funds": "เงินทุนไม่เพียงพอ",
+        "submission_details_missing": "รายละเอียดการส่งล้มเหลว",
+        "transaction_rejected": "การทำธุรกรรมถูกปฏิเสธ",
+        "transaction_failed": "การทำธุรกรรมล้มเหลว",
+        "transaction_simulation_failed": "การจำลองการทำธุรกรรมล้มเหลว",
+        "unknown_error": "ข้อผิดพลาดที่ไม่รู้จัก",
+        "wallet_connection_error": "ข้อผิดพลาดในการเชื่อมต่อกระเป๋า",
+        "invalid_params": "พารามิเตอร์ไม่ถูกต้อง",
+        "missing_required_param": "ขาดพารามิเตอร์ที่จำเป็น"
       }
     },
     "done": "เสร็จสิ้น",
     "copy": "คัดลอก",
-    "paste": "วาง"
+    "paste": "วาง",
+    "market_data": {
+      "vol": "VOL",
+      "price": "ราคา",
+      "mcap": "มูลค่าตลาด"
+    },
+    "king_of_hill": {
+      "title": "เปิดตัว",
+      "launch": "เปิดตัว",
+      "current_king": "ราชาปัจจุบัน",
+      "last_winner": "ผู้ชนะครั้งล่าสุด",
+      "no_previous_winner": "ไม่มีผู้ชนะก่อนหน้านี้",
+      "round_ends_in": "สิ้นสุดรอบใน",
+      "how_it_works": "วิธีการทำงาน",
+      "starting_next_round": "เริ่มรอบถัดไป",
+      "left": "ซ้าย",
+      "king_of_the_hill": "ราชาแห่งเขา",
+      "name": "ชื่อ",
+      "explain_sheet": {
+        "next": "ถัดไป",
+        "got_it": "รับทราบ",
+        "steps": {
+          "step_1": {
+            "title": "การแข่งขันกำลังดำเนินอยู่",
+            "subtitle_parts": [
+              "โทเค็นที่มี",
+              "ปริมาณการซื้อ",
+              "ขณะนี้เป็นราชาปัจจุบัน"
+            ]
+          },
+          "step_2": {
+            "title": "หนึ่งมงกุฎต่อวัน",
+            "subtitle_parts": [
+              "ที่",
+              "เที่ยงคืน (12:00 น. UTC), ",
+              "โทเค็นชั้นนำจะได้รับการสวมมงกุฎเป็นผู้ชนะประจำวัน"
+            ]
+          },
+          "step_3": {
+            "title": "รับรางวัล",
+            "subtitle_parts": [
+              "ผู้ซื้อที่เป็นราชาปัจจุบันจะได้รับ",
+              "2x จุด."
+            ],
+            "subtitle_two_parts": [
+              "ผู้สร้าง",
+              "รับคะแนน",
+              "เมื่อครอบครองบัลลังก์"
+            ]
+          }
+        }
+      }
+    }
   }
 }
