--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -774,10 +774,10 @@
       "chart": {
         "candlestick": {
           "candle_field_labels": {
-            "c": "Close",
+            "c": "CLOSE",
             "h": "H",
             "l": "L",
-            "o": "Open",
+            "o": "OPEN",
             "t": "",
             "v": "V"
           },
