Different display for markets you have an open position for

--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -1570,6 +1570,9 @@
       }
     },
     "perps": {
+      "markets": {
+        "already_open": "Already Open"
+      },
       "deposit": {
         "title": "Deposit",
         "no_balance": "No Balance",
