--- a/src/languages/en_US.json
+++ b/src/languages/en_US.json
@@ -708,7 +708,6 @@
           "reddit": "Reddit",
           "telegram": "Telegram",
           "twitter": "Twitter",
-          "warpcast": "Warpcast",
           "farcaster": "Farcaster",
           "other": "Other",
           "search_on_twitter": "Search on Twitter"
@@ -958,7 +957,7 @@
       "poolboy_title": "You've unlocked the\nRainbow Poolboy!",
       "adworld_description": "As a Rainbow World Citizen, you can now unlock a special edition\nAdWorld x Rainbow App Icon.",
       "adworld_title": "Welcome to Rainbow World!",
-      "farcaster_description": "Our most boring app icon ever, inspired by Warpcast's bland minimalism.",
+      "farcaster_description": "Our most boring app icon ever, inspired by Farcaster's bland minimalism.",
       "farcaster_title": "You've unlocked\nRainbowcast",
       "redacted_description": "A stupi-exclusive Rainbow icon for the true Gdupi enjoyers.",
       "redacted_title": "You've unlocked\n Redacted Rainbow",
